fix(BrowserTabs): handle case with too much tabs

--- a/app/css/browser/browser-stack.styl
+++ b/app/css/browser/browser-stack.styl
@@ -50,7 +50,7 @@
     position: relative;
     text-align: left;
     // TODO issue with ::after pseudo elements of tabs
-    z-index: 1000;
+    z-index: 100;
   }
 
   .browser-stack-wes-infinite {
