--- a/app/css/browser/browser-tab.styl
+++ b/app/css/browser/browser-tab.styl
@@ -8,6 +8,7 @@
   padding: 3px;
   position: relative;
   text-align: center;
+  white-space: nowrap;
 
   .loading {
     background-image: url(../../images/loading.svg);
@@ -29,7 +30,7 @@
     text-overflow: ellipsis;
     vertical-align: bottom;
     white-space: nowrap;
-    width: 80%;
+    width: 70%;
   }
 
   .ti-close {
