--- a/app/css/browser/browser-tabs.styl
+++ b/app/css/browser/browser-tabs.styl
@@ -20,12 +20,14 @@
   .browser-tabs-group-edge {
     flex-shrink: 1;
     flex-grow: 0;
-    z-index: 900;
+    z-index: 90;
   }
 
   .browser-tabs-group-main {
     flex: 1;
-    z-index: 800;
+    // to display the create new tab button
+    padding-right: 25px;
+    z-index: 80;
   }
 
   .browser-tab-content {
